--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Apr 02 21:26:14 EAT 2022
-sdk.dir=/Users/richardkamere/Library/Android/sdk
+sdk.dir=C\:\\Users\\schul\\AppData\\Local\\Android\\Sdk
