--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 02 10:35:09 CEST 2021
-sdk.dir=C\:\\Users\\win10\\AppData\\Local\\Android\\Sdk
+#Mon May 16 22:08:49 CEST 2022
+sdk.dir=C\:\\Users\\schul\\AppData\\Local\\Android\\Sdk
